Section Happy Clients finished...

--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@ and open the template in the editor.
                 <img src="img/hipster7.png" alt=""/>
                 </div>
             </section>
-            <section class="somework pt-5 pb-6">
+            <section class="somework pt-5">
                 <div class="container text-center">
                     <h5 class='pt-4 '>What we do</h5>
                     <h2 class="red-line1 pb-5 font-weight-bold text-uppercase">some of our work</h2>
@@ -504,7 +504,7 @@ and open the template in the editor.
                     </div>
                 </div>
             </section>
-            <section class="slider-2 pt-5 pb-5">
+            <section class="slider-2 pt-6 pb-5">
                  <ul class="slider2 list-unstyled owl-carousel">
                     <li>
                         <div class="container d-flex text-center">
@@ -540,6 +540,73 @@ and open the template in the editor.
                                  <h5>John Doe</h5>
                     </li>
                 </ul>
+            </section>
+            <section class="clients text-center mb-6" style="background-image: linear-gradient(to right, rgba(255,255,255,0.8), rgba(255,255,255,0.8)), url(img/mountain.png)">
+                <div class="container">
+                    <h5 class='pt-6 '>Happy Clients</h5>
+                    <h2 class="pb-5 font-weight-bold text-uppercase">What people say</h2>
+                    <div class="row">
+                        <div class="col-md-6 client-item d-flex mb-6">
+                            <div class="w-20">
+                                <img src="img/people-01.jpg" alt=""/>
+                            </div>
+                        <div class="w-80">
+                            <h6 class="text-dark">Matthew Dix</H6>
+                            <h6 class="font-italic red-line">Graphic Design</h6>
+                            <p class="pt-4">
+                                Lorem ipsum dolor sit amet, 
+                                consectetur adipiscing elit, 
+                                sed do eiusmod tempor incididunt
+                                ut labore et dolore magna aliqua. Ut enim ad minim.
+                            </p>
+                        </div>
+                    </div>
+                         <div class="col-md-6 client-item d-flex mb-6">
+                            <div class="w-20">
+                                <img src="img/people-02.jpg" alt=""/>
+                            </div>
+                        <div class="w-80">
+                            <h6 class="text-dark">Nick Karvounis</h6>
+                            <h6 class="font-italic red-line">Graphic Design</h6>
+                            <p class="pd-4">
+                                Lorem ipsum dolor sit amet, 
+                                consectetur adipiscing elit, 
+                                sed do eiusmod tempor incididunt
+                                ut labore et dolore magna aliqua. Ut enim ad minim.
+                            </p>
+                        </div>
+                    </div>
+                         <div class="col-md-6 client-item d-flex mb-6">
+                            <div class="w-20">
+                                <img src="img/people-03.jpg" alt=""/>
+                            </div>
+                        <div class="w-80">
+                            <h6 class="text-dark">Jaelynn Castillo </h6>
+                            <h6 class="font-italic red-line">Graphic Design</h6>
+                            <p>
+                                Lorem ipsum dolor sit amet, 
+                                consectetur adipiscing elit, 
+                                sed do eiusmod tempor incididunt
+                                ut labore et dolore magna aliqua. Ut enim ad minim.
+                            </p>
+                        </div>
+                    </div>
+                         <div class="col-md-6 client-item d-flex mb-6">
+                            <div class="w-20">
+                                <img src="img/people-04.jpg" alt=""/>
+                            </div>
+                        <div class="w-80">
+                            <h6 class="text-dark">Mike Petrucci</h6>
+                            <h6 class="font-italic red-line">Graphic Design</h6>
+                            <p>
+                                Lorem ipsum dolor sit amet, 
+                                consectetur adipiscing elit, 
+                                sed do eiusmod tempor incididunt
+                                ut labore et dolore magna aliqua. Ut enim ad minim.
+                            </p>
+                        </div>
+                    </div>
+                </div>
             </section>
             
             
